--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="ru">
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta charset="utf-8">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>My title</title>
 </head>
 
 <body>
+	<h1>Main page</h1>
 	kfkfkf
 	kfkfkf
 	kfkfkf
-	kfkfkf
+	kfkfkffrddd
 	kfkfkf ddddd
 </body>
 
