--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	kfkfkffrddd
 	kfkfkf ddddd
 	<p>На этой странице будет много интересного контента</p>
+	<a href="pages/about.html">Перейти на следующую страницу</a>
 </body>
 
 </html>
