feat: added an anordered list

--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
 </head>
 
 <body>
-	<h1>Main page</h1>
-	kfkfkf
+	<h1 class="heading">Main page</h1>
+	<header class="site-header">
+		<ul>
+			<li>
+				1
+			</li>
+			<li>
+				2
+			</li>
+		</ul>
+	</header>
 	kfkfkf
 	kfkfkf
 	kfkfkffrddd
 	kfkfkf ddddd
 	<p>На этой странице будет много интересного контента</p>
-	<a href="pages/about.html">Перейти  на следующую страницу</a>
+	<a href="pages/about.html">Перейти на следующую страницу</a>
 </body>
 
 </html>
